# br-rust-common

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/scripts/: check-changelog.sh  check-readme-pins.sh  coverage-summary.sh
.github/workflows/: ci.yml  (+1 more)
crates/br-core-auth/: CHANGELOG.md  Cargo.toml  README.md
crates/br-core-auth/src/: auth_method.rs  bearer_token.rs  builder.rs  claims.rs  error.rs  header.rs  lib.rs  passport.rs  session_cookie.rs
crates/br-core-directory/: Cargo.toml  README.md
crates/br-core-directory/src/: error.rs  flatten.rs  group.rs  keys.rs  lib.rs  meta.rs  service_account.rs  user.rs
crates/br-core-events/: CHANGELOG.md  Cargo.toml  README.md
crates/br-core-events/src/: events.rs  lib.rs  metadata.rs
crates/br-core-integration/: CHANGELOG.md  Cargo.toml  README.md
crates/br-core-integration/src/: awaiter.rs  awaiter_config.rs  consumer.rs  envelopes.rs  error.rs  lib.rs  nats.rs  nats_classify.rs  noop.rs  outcome.rs  publisher.rs  subject.rs
crates/br-core-integration/src/coords/: mod.rs  newtypes.rs  segment.rs  structs.rs
crates/br-core-integration/src/outbox/: driver.rs  health.rs  mod.rs  record.rs  relay.rs  report.rs  retry.rs  stage.rs  status.rs  store.rs  table_name.rs  verify.rs
crates/br-core-integration/tests/: awaiter_e2e.rs  consumer_e2e.rs  nats.rs  outbox_concurrency_e2e.rs  outbox_driver_e2e.rs  outbox_e2e.rs
crates/br-core-integration/tests/common/: mod.rs
crates/br-core-integration/tests/outbox_common/: mod.rs
crates/br-core-kernel/: CHANGELOG.md  Cargo.toml  README.md
crates/br-core-kernel/src/: actor.rs  lib.rs
crates/br-core-scope/: CHANGELOG.md  Cargo.toml  README.md
crates/br-core-scope/src/: declaration.rs  error.rs  key.rs  lib.rs  messages.rs  raw.rs  service.rs  spec.rs
crates/br-core-values/: CHANGELOG.md  Cargo.toml  README.md
crates/br-core-values/src/: conformance.rs  error.rs  lib.rs
crates/br-core-values/src/error/: golden.rs  mod.rs  wire.rs
crates/br-core-values/src/iso/: country.rs  country_codes.rs  currency.rs  currency_codes.rs  mod.rs  money.rs
crates/br-core-values/src/localized/: codec.rs  content.rs  entry.rs  format.rs  mod.rs  tests.rs  value.rs
crates/br-identity-app/: CHANGELOG.md  Cargo.toml  README.md
crates/br-identity-app/migrations/: 0001_scope_registry.sql
crates/br-identity-app/src/: conflict.rs  consumer.rs  error.rs  hydration.rs  lib.rs  migrations.rs  pipeline.rs  publisher.rs  repository.rs
crates/br-identity-app/tests/: scope_registration_e2e.rs
crates/br-identity-app/tests/common/: mod.rs
crates/br-identity-domain/: CHANGELOG.md  Cargo.toml  README.md
crates/br-identity-domain/src/: error.rs  event.rs  handler.rs  identity.rs  lib.rs  registry.rs  service.rs
crates/br-scope-declaration-contract/: Cargo.toml  README.md
crates/br-scope-declaration-contract/src/: lib.rs
crates/br-test-support/: CHANGELOG.md  Cargo.toml  README.md
crates/br-test-support/src/: lib.rs
crates/br-util-axum-auth/: CHANGELOG.md  Cargo.toml  README.md
crates/br-util-axum-auth/src/: lib.rs
crates/br-util-axum-readiness/: CHANGELOG.md  Cargo.toml  README.md
crates/br-util-axum-readiness/src/: lib.rs
crates/br-util-broadcast/: CHANGELOG.md  Cargo.toml  README.md
crates/br-util-broadcast/src/: bus.rs  error.rs  lib.rs  pending.rs
crates/br-util-broadcast/tests/: fan_out.rs
crates/br-util-directory/: Cargo.toml  README.md
crates/br-util-directory/migrations/: 0001_known_directory.sql
crates/br-util-directory/src/: error.rs  keys.rs  lib.rs
crates/br-util-directory/src/consumer/: config.rs  manifest.rs  migrate.rs  mod.rs  project.rs  recompose.rs  snapshot.rs
crates/br-util-directory/src/consumer/sink/: group.rs  mod.rs  service_account.rs  user.rs
crates/br-util-directory/src/publisher/: mod.rs  publish.rs  reconcile.rs  source.rs
crates/br-util-graphql/: CHANGELOG.md  Cargo.toml  README.md
crates/br-util-graphql/src/: affordance.rs  lib.rs  mutation.rs  pagination.rs  subscription.rs
crates/br-util-graphql/src/error/: code.rs  edge.rs  gql.rs  mod.rs  rest.rs
crates/br-util-graphql/src/values/: error.rs  locale.rs  localized.rs  mod.rs  money.rs  money_amount.rs
crates/br-util-graphql/tests/: schema_mounting.rs
crates/br-util-nats-fabric/: Cargo.toml  README.md
crates/br-util-nats-fabric/src/: awaiter.rs  classify.rs  error.rs  fabric.rs  lib.rs  stream.rs
crates/br-util-nats-fabric/src/consumer/: bind.rs  bound.rs  config.rs  handle.rs  mod.rs  open.rs  run.rs  verify.rs
crates/br-util-nats-fabric/src/coords/: mod.rs  parse.rs  render.rs
crates/br-util-nats-fabric/src/kv/: bucket.rs  codec.rs  consumer.rs  ephemeral_auth.rs  ephemeral_auth_watch.rs  health.rs  key.rs  mod.rs  publisher.rs  reader.rs  reconcile.rs  revision.rs  scan.rs  sink.rs
crates/br-util-nats-fabric/src/outbox/: driver.rs  health.rs  mod.rs  record.rs  relay.rs  report.rs  stage.rs  store.rs
crates/br-util-nats-fabric/tests/: ephemeral_auth_surface_e2e.rs  fabric_e2e.rs  transport_e2e.rs
crates/br-util-observability/: CHANGELOG.md  Cargo.toml  README.md
crates/br-util-observability/src/: health.rs  lib.rs  logging.rs  metrics.rs  visitor.rs
crates/br-util-observability/src/metrics/: error.rs  http_layer.rs  init.rs  route.rs
crates/br-util-postgres/: CHANGELOG.md  Cargo.toml  README.md
crates/br-util-postgres/src/: error.rs  grant.rs  lib.rs  net.rs  pool.rs  rls.rs  role.rs  test_support.rs
crates/br-util-postgres/tests/: bootstrap.rs
crates/br-util-postgres/tests/common/: mod.rs
crates/br-util-scope-declaration/: CHANGELOG.md  Cargo.toml  README.md
crates/br-util-scope-declaration/src/: actor.rs  config.rs  handshake.rs  lib.rs  outcome.rs  subjects.rs
crates/br-util-scope-declaration/tests/: handshake_e2e.rs
crates/br-util-scope-declaration/tests/common/: mod.rs
src/: config.rs  db.rs  error.rs  event.rs  grant.rs  ids.rs  kv.rs  kv_nats.rs  lib.rs  middleware.rs  net.rs  passport.rs  passport_header.rs  pat.rs  rls.rs
