[workspace]
resolver = "3"
members = [
    "crates/br-core-auth",
    "crates/br-core-events",
    "crates/br-core-integration",
    "crates/br-core-kernel",
    "crates/br-util-axum-auth",
    "crates/br-util-axum-readiness",
    "crates/br-util-postgres",
]

[workspace.package]
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/BotResources/br-rust-common"

[workspace.dependencies]
# Internal (this repo)
br-core-auth = { path = "crates/br-core-auth", version = "0.6.1" }
br-core-events = { path = "crates/br-core-events", version = "0.3.1" }
br-core-integration = { path = "crates/br-core-integration", version = "0.1.0" }
br-core-kernel = { path = "crates/br-core-kernel", version = "0.4.0" }
br-util-axum-auth = { path = "crates/br-util-axum-auth", version = "0.4.1" }
br-util-axum-readiness = { path = "crates/br-util-axum-readiness", version = "0.1.0" }
br-util-postgres = { path = "crates/br-util-postgres", version = "0.5.3" }

# External
async-nats = "0.48"
async-trait = "0.1"
futures-util = "0.3"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
uuid = { version = "1", features = ["v7", "serde"] }
