[workspace]
resolver = "3"
members = [
    "crates/br-core-auth",
    "crates/br-core-events",
    "crates/br-core-integration",
    "crates/br-core-kernel",
    "crates/br-core-scope",
    "crates/br-core-values",
    "crates/br-identity-app",
    "crates/br-identity-domain",
    "crates/br-util-axum-auth",
    "crates/br-util-axum-readiness",
    "crates/br-util-observability",
    "crates/br-util-postgres",
    "crates/br-util-scope-declaration",
]

[workspace.package]
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/BotResources/br-rust-common"

[workspace.dependencies]
# Internal (this repo)
br-core-auth = { path = "crates/br-core-auth", version = "0.6.2" }
br-core-events = { path = "crates/br-core-events", version = "0.4.0" }
br-core-integration = { path = "crates/br-core-integration", version = "0.3.1" }
br-core-kernel = { path = "crates/br-core-kernel", version = "0.4.1" }
br-core-scope = { path = "crates/br-core-scope", version = "0.1.1" }
br-core-values = { path = "crates/br-core-values", version = "0.1.0" }
br-identity-app = { path = "crates/br-identity-app", version = "0.1.1" }
br-identity-domain = { path = "crates/br-identity-domain", version = "0.1.0" }
br-util-axum-auth = { path = "crates/br-util-axum-auth", version = "0.4.2" }
br-util-axum-readiness = { path = "crates/br-util-axum-readiness", version = "0.1.1" }
br-util-observability = { path = "crates/br-util-observability", version = "0.1.0" }
br-util-postgres = { path = "crates/br-util-postgres", version = "0.7.0" }
br-util-scope-declaration = { path = "crates/br-util-scope-declaration", version = "0.1.1" }

# External
async-nats = "0.48"
async-trait = "0.1"
futures-util = "0.3"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
# `tls-rustls-ring-webpki`: pure-Rust rustls with the `ring` crypto provider
# and the bundled webpki-roots CA set — no system trust store, no OpenSSL, so
# the container build stays hermetic. Without a TLS backend, sqlx 0.8 rejects
# `sslmode=require|verify-ca|verify-full` at connect time ("TLS upgrade
# required … built without TLS support enabled"), making the crate's
# remote-host TLS requirement unfulfillable at runtime.
url = "2"
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls-ring-webpki",
] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v5", "v7", "serde"] }
