[workspace]
resolver = "3"
members = [
    "crates/br-core-auth",
    "crates/br-core-directory",
    "crates/br-core-events",
    "crates/br-core-integration",
    "crates/br-core-kernel",
    "crates/br-core-scope",
    "crates/br-core-values",
    "crates/br-identity-app",
    "crates/br-identity-domain",
    "crates/br-scope-declaration-contract",
    "crates/br-test-support",
    "crates/br-util-axum-auth",
    "crates/br-util-axum-readiness",
    "crates/br-util-broadcast",
    "crates/br-util-directory",
    "crates/br-util-graphql",
    "crates/br-util-nats-fabric",
    "crates/br-util-observability",
    "crates/br-util-postgres",
    "crates/br-util-scope-declaration",
]

[workspace.package]
version = "1.0.2"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/BotResources/br-rust-common"

[workspace.dependencies]
br-core-auth = { path = "crates/br-core-auth", version = "1.0.1" }
br-core-directory = { path = "crates/br-core-directory", version = "1.0.1" }
br-core-events = { path = "crates/br-core-events", version = "1.0.1" }
br-core-integration = { path = "crates/br-core-integration", version = "1.0.1" }
br-core-kernel = { path = "crates/br-core-kernel", version = "1.0.1" }
br-core-scope = { path = "crates/br-core-scope", version = "1.0.1" }
br-core-values = { path = "crates/br-core-values", version = "1.0.1" }
br-identity-app = { path = "crates/br-identity-app", version = "1.0.1" }
br-identity-domain = { path = "crates/br-identity-domain", version = "1.0.1" }
br-scope-declaration-contract = { path = "crates/br-scope-declaration-contract", version = "1.0.1" }
br-test-support = { path = "crates/br-test-support", version = "1.0.1" }
br-util-axum-auth = { path = "crates/br-util-axum-auth", version = "1.0.1" }
br-util-axum-readiness = { path = "crates/br-util-axum-readiness", version = "1.0.1" }
br-util-broadcast = { path = "crates/br-util-broadcast", version = "1.0.1" }
br-util-directory = { path = "crates/br-util-directory", version = "1.0.1" }
br-util-graphql = { path = "crates/br-util-graphql", version = "1.0.1" }
br-util-nats-fabric = { path = "crates/br-util-nats-fabric", version = "1.0.1" }
br-util-observability = { path = "crates/br-util-observability", version = "1.0.1" }
br-util-postgres = { path = "crates/br-util-postgres", version = "1.0.1" }
br-util-scope-declaration = { path = "crates/br-util-scope-declaration", version = "1.0.1" }

async-nats = "0.48"
async-trait = "0.1"
futures-util = "0.3"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false }
metrics-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
url = "2"
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls-ring-webpki",
] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v5", "v7", "serde"] }
