[package]
name = "br-core-auth"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Passport identity DTO and X-Passport header codec shared across services"
repository = "https://github.com/BotResources/br-service-core"

[dependencies]
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
