[package]
name = "br-core-auth"
version = "0.6.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Passport identity DTO, X-Passport header codec, PAT bearer-token contract, and session-cookie contract shared across BotResources services"

[dependencies]
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
