[package]
name = "br-core-directory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Frozen read contract for the identity Published Language (PublishedUser/PublishedGroup directory entries + the identity/_meta manifest + KV key conventions)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
