[package]
name = "br-core-integration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Transport-independent integration contracts: message coordinates, typed event/command envelopes, the message outcome, and the pure outbox state machine"

[dependencies]
br-core-events = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
br-core-kernel = { workspace = true }
serde_json = { workspace = true }
