[package]
name = "br-identity-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Identity bounded context — application/adapter half. Scope-registration slice: Postgres persistence, durable NATS consumer, and the load → judge → save → dispatch pipeline"

[dependencies]
br-core-integration = { workspace = true }
br-core-scope = { workspace = true }
br-identity-domain = { workspace = true }
br-scope-declaration-contract = { workspace = true }
br-util-nats-fabric = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
async-nats = { workspace = true }
br-test-support = { workspace = true }
br-util-postgres = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
br-util-axum-readiness = { workspace = true }
