[package]
name = "br-scope-declaration-contract"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Single-source wire coordinates (bc/aggregate/version/command) for the identity service-scope declaration contract, shared by the identity-app publisher and the util-scope-declaration handshake"

[dependencies]
br-core-integration = { workspace = true }
