[package]
name = "br-util-axum-auth"
version = "0.4.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Axum middleware that extracts the X-Passport header into a request extension"

[dependencies]
axum = { workspace = true }
br-core-auth = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
uuid = { workspace = true }
