[package]
name = "br-util-axum-readiness"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "An Axum readiness gate: a UP/DOWN toggle and a /readyz handler (readiness, not liveness)"

[dependencies]
axum = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true }
