[package]
name = "br-util-directory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Publisher + consumer kit for the identity Published Language over the NATS Fabric: reconcile/orphan-delete (publisher) and a KV->PG projector with consumer-owned extension-extract, copy filter, and consumption scope over known_users/known_groups/known_user_group/known_service_accounts (consumer)"

[features]
default = []
publisher = ["dep:async-trait"]
consumer = [
    "dep:br-util-postgres",
    "dep:sqlx",
    "dep:async-trait",
    "dep:serde_json",
    "dep:tokio",
]

[dependencies]
br-core-directory = { workspace = true }
br-util-nats-fabric = { workspace = true }
br-util-postgres = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true, features = ["uuid", "json"] }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
uuid = { workspace = true }
