[package]
name = "br-util-graphql"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The GraphQL/REST edge kit shared across BotResources services: the cross-service ErrorCode contract (GraphQL extensions + REST IntoResponse), first-class Affordance / MutationResult ack / Connection pagination / SubscriptionPayload types, and fallible (TryFrom) GraphQL wrappers over br-core-values"

[features]
graphql = [
    "dep:async-graphql",
    "dep:axum",
    "dep:br-core-values",
    "dep:serde_json",
    "dep:tracing",
]

[dependencies]
async-graphql = { version = "7", features = ["chrono", "uuid"], optional = true }
axum = { workspace = true, optional = true }
br-core-values = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
