[package]
name = "br-util-observability"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "One boot-time observability setup for every BR process: structured JSON logging + an always-200 /livez liveness route"

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true }
