[package]
name = "br-util-observability"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "One boot-time observability setup for every BR process: structured JSON logging, an always-200 /livez liveness route, and an anonymized Prometheus /metrics endpoint"

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
metrics-process = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
