[package]
name = "br-util-postgres"
version = "0.7.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Postgres helpers for BotResources services: pools, TLS validation, RLS context, grants"

[dependencies]
br-core-auth = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
