[package]
name = "br-util-postgres"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Postgres helpers for BotResources services: pools, TLS validation, app roles, grants"

[dependencies]
sqlx = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
br-test-support = { workspace = true }
tokio = { workspace = true }
