[package]
name = "br-util-scope-declaration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Boot-time scope-declaration handshake helper: a generic service declares its scopes to Identity and gates readiness on the confirmation"

[dependencies]
br-core-integration = { workspace = true }
br-core-scope = { workspace = true }
br-scope-declaration-contract = { workspace = true }
br-util-axum-readiness = { workspace = true }
br-util-nats-fabric = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v5"] }

[dev-dependencies]
br-core-kernel = { workspace = true }
async-nats = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
